--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorMainBackground">#232b36</color>
+
+    <!--Authorization-->
+    <color name="colorAuthHintText">#782daae1</color>
+    <color name="colorAuthText">#fefefe</color>
+    <color name="colorLogInButton">#39a8e4</color>
+
 </resources>
