--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
 
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
-        <item name="android:windowTranslucentStatus" tools:targetApi="21">true</item>
+        <item name="android:windowTranslucentStatus" tools:targetApi="22">true</item>
 
         <item name="android:windowContentOverlay">@null</item>
         <item name="windowActionBar">false</item>
@@ -17,12 +17,11 @@
         <item name="actionBarTheme">@style/AppTheme.ActionBarTheme</item>
 
         <!-- Material Theme -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/accent_color</item>
+        <item name="colorPrimary">@color/colorMainBackground</item>
+        <item name="colorPrimaryDark">@color/colorMainBackground</item>
+        <item name="colorAccent">@color/colorMainBackground</item>
 
-        <item name="android:navigationBarColor" tools:targetApi="21">@color/navigationBarColor
-        </item>
+        <item name="android:navigationBarColor" tools:targetApi="21">@color/navigationBarColor</item>
         <item name="android:windowDrawsSystemBarBackgrounds" tools:targetApi="21">true</item>
 
     </style>
@@ -35,6 +34,10 @@
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="spinBars">true</item>
         <item name="color">@color/drawerArrowColor</item>
+    </style>
+
+    <style name="AuthorizationHintText" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textColor">#FF2DAAE1</item>
     </style>
 
 </resources>
