--- a/app/src/main/res/layout/fragment_interview_tab.xml
+++ b/app/src/main/res/layout/fragment_interview_tab.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/scrollView"
+    android:id="@+id/scrollViewInterview"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <include layout="@layout/material_view_pager_placeholder"/>
+        <include layout="@layout/material_view_pager_placeholder" />
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -28,11 +28,9 @@
                 android:orientation="vertical">
 
                 <ListView
+                    android:id="@+id/interviewListView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/interviewListView">
-                </ListView>
-
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
