--- a/app/src/main/res/layout/activity_questionnaire_creation.xml
+++ b/app/src/main/res/layout/activity_questionnaire_creation.xml
@@ -1,11 +1,229 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorMainBackground"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:orientation="vertical"
     tools:context="com.qit.android.activity.QuestionnaireCreationActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarQuestionnaireCreation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorMainBackground"
+        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="65dp"
+        android:layout_height="31dp"
+        app:srcCompat="@drawable/qit_logo"
+        android:layout_gravity="right"
+        android:layout_marginRight="30dp"/>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/tilTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:textColorHint="@color/colorAuthHintText"
+        app:hintTextAppearance="@style/HintTextLight">
+
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/etTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorAuthHintText"
+            android:hint="@string/creation_title"
+            android:inputType="text"
+            android:textColor="@color/colorAuthText" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/tilDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:textColorHint="@color/colorAuthHintText"
+        app:hintTextAppearance="@style/HintTextLight"
+        app:layout_constraintTop_toBottomOf="@+id/tilTitle">
+
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/etDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorAuthHintText"
+            android:hint="@string/creation_description"
+            android:inputType="text"
+            android:textColor="@color/colorAuthText" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <View
+        android:id="@+id/space"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/colorSpace"
+        app:layout_constraintTop_toBottomOf="@+id/tilDescription" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="32dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="32dp">
+
+        <TextView
+            android:id="@+id/tvIsPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_lock_open_black_18dp"
+            android:drawablePadding="18dp"
+            android:text="@string/creation_is_password"
+            android:textColor="@color/colorAuthHintText"
+            android:textSize="18sp"
+            android:layout_gravity="left"
+            android:layout_weight="1"/>
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/switchPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:shadowColor="@color/colorSpace"
+            android:theme="@style/QITSwitch" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="15dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="32dp">
+
+        <TextView
+            android:id="@+id/tvStartDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_date_range_black_18dp"
+            android:drawablePadding="18dp"
+            android:text="@string/creation_start_date"
+            android:textColor="@color/colorAuthHintText"
+            android:textSize="18sp"
+            android:layout_gravity="left"
+            android:layout_weight="1"/>
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/switchStartDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:shadowColor="@color/colorSpace"
+            android:theme="@style/QITSwitch" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="15dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="32dp">
+
+        <TextView
+            android:id="@+id/tvEndDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_date_range_black_18dp"
+            android:drawablePadding="18dp"
+            android:text="@string/creation_end_date"
+            android:textColor="@color/colorAuthHintText"
+            android:textSize="18sp"
+            android:layout_gravity="left"
+            android:layout_weight="1"/>
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/switchEndDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:shadowColor="@color/colorSpace"
+            android:theme="@style/QITSwitch" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="15dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="32dp">
+
+        <TextView
+            android:id="@+id/tvIsAnonymity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_anonymity_black_18dp"
+            android:drawablePadding="18dp"
+            android:text="@string/creation_is_anonymity"
+            android:textColor="@color/colorAuthHintText"
+            android:textSize="18sp"
+            android:layout_gravity="left"
+            android:layout_weight="1" />
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/switchIsAnonymity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:shadowColor="@color/colorSpace"
+            android:theme="@style/QITSwitch" />
+
+    </LinearLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="15dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="32dp">
+
+        <TextView
+            android:id="@+id/tvAnswersLimit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_answers_limit_black_18dp"
+            android:drawablePadding="18dp"
+            android:text="@string/creation_answers_limit"
+            android:textColor="@color/colorAuthHintText"
+            android:textSize="18sp"
+            android:layout_gravity="left"
+            android:layout_weight="1" />
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/switchAnswersLimit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:shadowColor="@color/colorSpace"
+            android:theme="@style/QITSwitch" />
+
+    </LinearLayout>
+
+</LinearLayout>
