--- a/app/src/main/res/layout/fragment_questionnaire_tab.xml
+++ b/app/src/main/res/layout/fragment_questionnaire_tab.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <include layout="@layout/material_view_pager_placeholder" />
@@ -25,12 +25,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="1000dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:id="@+id/llForListView">
 
-                <ListView
-                    android:id="@+id/questionnaireListView"
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/questionnaireRV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
+
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
