--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,8 +36,23 @@
         <item name="color">@color/drawerArrowColor</item>
     </style>
 
-    <style name="AuthorizationHintText" parent="TextAppearance.AppCompat.Small">
+    <style name="HintTextDark" parent="TextAppearance.AppCompat.Small">
         <item name="android:textColor">#FF2DAAE1</item>
+    </style>
+
+    <style name="HintTextLight" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textColor">#FF2DAAE1</item>
+    </style>
+
+    <style name="QITSwitch" parent="Theme.AppCompat.Light">
+        <!-- active thumb & track color (30% transparency) -->
+        <item name="colorControlActivated">#48c45d</item>
+
+        <!-- inactive thumb color -->
+        <item name="colorSwitchThumbNormal">#f1f1f1</item>
+
+        <!-- inactive track color (30% transparency) -->
+        <item name="android:colorForeground">#80221f1f</item>
     </style>
 
 </resources>
