--- a/app/src/main/res/anim/show_from_left.xml
+++ b/app/src/main/res/anim/show_from_left.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <translate xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:interpolator/accelerate_cubic"
-    android:fromYDelta="30%p"
-    android:toYDelta="0"
-    android:duration="200" />
+    android:fromXDelta="0"
+    android:toXDelta="30%p"
+    android:duration="500" />
