--- a/app/src/main/res/layout/activity_questionnaire_creation.xml
+++ b/app/src/main/res/layout/activity_questionnaire_creation.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/llQuestionnaire"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorMainBackground"
@@ -17,13 +18,13 @@
         android:background="@color/colorMainBackground"
         app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <ImageView
+ <!--   <ImageView
         android:id="@+id/imageView"
         android:layout_width="65dp"
         android:layout_height="31dp"
-        app:srcCompat="@drawable/qit_logo"
         android:layout_gravity="right"
-        android:layout_marginRight="30dp"/>
+        android:layout_marginRight="30dp"
+        app:srcCompat="@drawable/qit_logo" />-->
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/tilTitle"
@@ -41,7 +42,8 @@
             android:backgroundTint="@color/colorAuthHintText"
             android:hint="@string/creation_title"
             android:inputType="text"
-            android:textColor="@color/colorAuthText" />
+            android:textColor="@color/colorAuthText"
+            android:maxLength="50"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -63,7 +65,8 @@
             android:backgroundTint="@color/colorAuthHintText"
             android:hint="@string/creation_description"
             android:inputType="text"
-            android:textColor="@color/colorAuthText" />
+            android:textColor="@color/colorAuthText"
+            android:maxLength="150"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -79,21 +82,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="32dp"
         android:paddingLeft="20dp"
-        android:paddingRight="32dp">
+        android:paddingRight="32dp"
+        android:paddingTop="32dp">
 
         <TextView
             android:id="@+id/tvIsPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_weight="1"
             android:drawableLeft="@drawable/ic_lock_open_black_18dp"
             android:drawablePadding="18dp"
             android:text="@string/creation_is_password"
             android:textColor="@color/colorAuthHintText"
-            android:textSize="18sp"
-            android:layout_gravity="left"
-            android:layout_weight="1"/>
+            android:textSize="18sp" />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/switchPassword"
@@ -109,21 +112,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="15dp"
         android:paddingLeft="20dp"
-        android:paddingRight="32dp">
+        android:paddingRight="32dp"
+        android:paddingTop="15dp">
 
         <TextView
             android:id="@+id/tvStartDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_weight="1"
             android:drawableLeft="@drawable/ic_date_range_black_18dp"
             android:drawablePadding="18dp"
             android:text="@string/creation_start_date"
             android:textColor="@color/colorAuthHintText"
-            android:textSize="18sp"
-            android:layout_gravity="left"
-            android:layout_weight="1"/>
+            android:textSize="18sp" />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/switchStartDate"
@@ -139,21 +142,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="15dp"
         android:paddingLeft="20dp"
-        android:paddingRight="32dp">
+        android:paddingRight="32dp"
+        android:paddingTop="15dp">
 
         <TextView
             android:id="@+id/tvEndDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_weight="1"
             android:drawableLeft="@drawable/ic_date_range_black_18dp"
             android:drawablePadding="18dp"
             android:text="@string/creation_end_date"
             android:textColor="@color/colorAuthHintText"
-            android:textSize="18sp"
-            android:layout_gravity="left"
-            android:layout_weight="1"/>
+            android:textSize="18sp" />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/switchEndDate"
@@ -169,21 +172,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="15dp"
         android:paddingLeft="20dp"
-        android:paddingRight="32dp">
+        android:paddingRight="32dp"
+        android:paddingTop="15dp">
 
         <TextView
             android:id="@+id/tvIsAnonymity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_weight="1"
             android:drawableLeft="@drawable/ic_anonymity_black_18dp"
             android:drawablePadding="18dp"
             android:text="@string/creation_is_anonymity"
             android:textColor="@color/colorAuthHintText"
-            android:textSize="18sp"
-            android:layout_gravity="left"
-            android:layout_weight="1" />
+            android:textSize="18sp" />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/switchIsAnonymity"
@@ -200,21 +203,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="15dp"
         android:paddingLeft="20dp"
-        android:paddingRight="32dp">
+        android:paddingRight="32dp"
+        android:paddingTop="15dp">
 
         <TextView
             android:id="@+id/tvAnswersLimit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_weight="1"
             android:drawableLeft="@drawable/ic_answers_limit_black_18dp"
             android:drawablePadding="18dp"
             android:text="@string/creation_answers_limit"
             android:textColor="@color/colorAuthHintText"
-            android:textSize="18sp"
-            android:layout_gravity="left"
-            android:layout_weight="1" />
+            android:textSize="18sp" />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/switchAnswersLimit"
@@ -224,6 +227,30 @@
             android:shadowColor="@color/colorSpace"
             android:theme="@style/QITSwitch" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:background="@drawable/button_cancel_green_rounded_corners"
+            android:text="Cancel"
+            android:onClick="handleBtnNext"/>
+
+        <Button
+            android:id="@+id/btnNext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:background="@drawable/button_next_green_rounded_corners"
+            android:text="Next" />
     </LinearLayout>
 
 </LinearLayout>
