--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -8,7 +8,9 @@
     android:orientation="vertical"
     tools:context="com.qit.android.activity.AuthorizationActivity"
     android:focusable="true"
-    android:focusableInTouchMode="true">
+    android:focusableInTouchMode="true"
+    android:paddingLeft="40dp"
+    android:paddingRight="40dp">
 
     <ImageView
         android:id="@+id/imageLogo"
@@ -19,7 +21,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/tilLogin"
-        android:layout_width="270dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         app:hintTextAppearance="@style/HintTextLight"
@@ -38,12 +40,12 @@
 
 
     <android.support.design.widget.TextInputLayout
-        android:layout_width="270dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tilPassword"
         app:passwordToggleEnabled="true"
         app:passwordToggleTintMode="multiply"
-        app:passwordToggleTint="#bb2daae1"
+        app:passwordToggleTint="@color/mdtp_light_gray"
         app:hintTextAppearance="@style/HintTextLight"
         android:textColorHint="@color/colorAuthHintText">
 
@@ -58,14 +60,40 @@
 
     </android.support.design.widget.TextInputLayout>
 
-    <Button
-        android:layout_width="280dp"
-        android:layout_height="60dp"
-        android:id="@+id/btnLogIn"
-        android:text="@string/log_in"
-        android:background="@drawable/button_login_green_rounded_corners"
-        android:textColor="@color/colorAuthText"
+    <TextView
+        android:id="@+id/etForgotPass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
         android:layout_marginTop="40dp"
-        android:onClick="logIn" />
+        android:text="Forgot your password?"
+        android:gravity="right"
+        android:textSize="17sp"
+        android:textColor="@color/colorLogInButton"/>
+
+    <Button
+        android:id="@+id/btnLogIn"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/button_login_green_rounded_corners"
+        android:onClick="logIn"
+        android:text="@string/log_in"
+        android:textColor="@color/colorAuthText" />
+
+    <TextView
+        android:id="@+id/etRegistration"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Registration"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textColor="@color/colorLogInButton"
+        android:layout_marginTop="12dp"
+        android:onClick="register"/>
+
 
 </LinearLayout>
